[package]
name = "hname"
version = "0.1.0"
edition = "2018"
authors = ["Daniel P. Teberian"]
description = "Determines hostname."


[lib]
name = "hname"
path = "src/lib.rs"

[features]
unstable = []

[target.'cfg(any(unix, target_os = "liberty"))'.dependencies]
libc = "^0.2"

[target."cfg(windows)".dependencies]
winutil = "^0.1.1"
